--- a/templates/index.html
+++ b/templates/index.html
@@ -38,11 +38,13 @@
                 <li><a role="link" aria-disabled="true" data-title="analyse">Analyse</a></li>
             </ul>
         </div>
+        <!-- Area, where the main content is being displayed -->
         <div class="main-space">
             <div class="main-space-top">
                 <h3>Tweet Sentiment Analyse mithilfe von Active Learning</h3>
                 <hr index1>
             </div>
+            <!-- Area to manage datasets -->
             <div class="main-space-bottom">
                 <div class="text-left">
                     <!--Form that allows the user to create a new dataset based on the parameters the twitter dataset-->
@@ -53,6 +55,7 @@
                         "Erstellen", um die Ergebnisse im Dropdown Menü, der bestehenden Datensätze anzuzeigen.
                     </p>
                 </div>
+                <!-- Area with input fields to create a new dataset -->
                 <div class="main-space-bottom-left" pill>
                     <div>
                         <p>Neuen Datensatz erstellen</p>
@@ -87,6 +90,7 @@
                         Tweets annotieren möchten, wählen Sie diesen aus und Sie werden zum Annotationstool
                         weitergeleitet.</p>
                 </div>
+                <!-- Area to manage exisiting datasets -->
                 <div class="main-space-bottom-right" pill>
                     <div>
                         <p>Aus bestehenden Datensätzen wählen</p>
@@ -103,6 +107,7 @@
                             </select>
                         </div>
                         <input class="homebutton" type="submit" value="Auswählen" id="login_dataset_choice" />
+                        <!-- Delete and Download buttons  -->
                         <div class="main-space-bottom-right-buttons">
                             <input class="homebutton" type="" value="Löschen" onclick="delete_csv()" id="delete_dataset"
                                 delete />
