--- a/static/css/general.css
+++ b/static/css/general.css
@@ -13,27 +13,28 @@ body {
   margin: 0;
 }
 
+/* Schriftfarben */
 p,
 label,
 #analysis h3[white] {
   color: azure;
 }
+/* Überschrift Indexseite Schatten einfügen */
 #index h3 {
   text-shadow: 0 0 10px #ffffff;
 }
+/* Analyse Seitenüberschrift grau machen */
 #analysis h3:not(h3[white]) {
   text-shadow: 0 0 10px #ffffff;
   font-size: xx-large;
 }
-
+/* Schriftfarbe für Labelbuttontext auf labeling page festlegen */
 .bottom-buttons p {
   color: black;
 }
 
 /* ================== MENUBAR ================== */
-
-@import url(https://fonts.googleapis.com/css?family=Lato:100,400);
-
+/* HTML Elemente, die auf allen Seiten gleich sind */
 li.arrow {
   content: "";
   width: 2rem;
@@ -96,16 +97,16 @@ ul[navbar] li {
   transform: translateX(-50%);
 }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
+/* Show the pop-up when clicking on a button (class added with JavaScript) */
 #pop_up.show {
   visibility: visible;
-  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  /* Add animation: Take 0.5 seconds to fade in and out.
   However, delay the fade out process for 2.5 seconds */
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
-/* Animations to fade the snackbar in and out */
+/* Animations to fade in and out */
 @-webkit-keyframes fadein {
   from {
     bottom: 0;
@@ -151,7 +152,7 @@ ul[navbar] li {
 }
 
 /* ================== BUTTONS ================== */
-
+/* Buttons auf Index page */
 .homebutton {
   appearance: button;
   backface-visibility: hidden;
@@ -201,6 +202,7 @@ button[active-learning] {
   background-color: #e93f3f;
 }
 
+/* Buttons auf Labeling Page */
 .labelbutton {
   appearance: button;
   backface-visibility: hidden;
@@ -253,7 +255,7 @@ div[pill] {
   padding: 2rem;
   margin: 0px;
 }
-
+/* generelles Layout für input Felder */
 input {
   text-align: center;
   background-color: #ffff;
@@ -261,6 +263,7 @@ input {
   border-radius: 10px 20px;
   border: #cfd6dd;
 }
+/* Layout für alle außer dropdown-menu Inputfelder */
 input[type="text"],
 [type="number"],
 [type="date"] {
@@ -268,11 +271,10 @@ input[type="text"],
   background-color: #ffff;
   border-radius: 10px 20px;
   border: #cfd6dd;
-
   margin: auto;
   padding: 1% 1rem;
 }
-
+/* Layout für dropdown Menüs */
 select {
   text-align: center;
   background-color: #fff;
@@ -281,7 +283,7 @@ select {
   margin: auto;
   padding: 1% 1rem;
 }
-
+/* zwei verschiedene horizontale Trennlinien */
 #start hr[index1],
 #index hr[index1],
 #labeling hr[index1],
