--- a/static/css/labeling.css
+++ b/static/css/labeling.css
@@ -39,14 +39,6 @@
   gap: 2vh;
 }
 
-.first {
-  position: absolute;
-}
-.second {
-  position: relative;
-  top: 8vh;
-}
-
 /* Layout für Progress Bar */
 .w3-light-grey,
 #myBar {
@@ -55,7 +47,7 @@
   text-align: center;
 }
 
-/* Layout für Tweet Labeltexte */
+/* Layout für <p> Tweet Labeltexte */
 #pro_labeltext,
 #anti_labeltext,
 #neutral_labeltext,
@@ -75,56 +67,6 @@
 }
 .labeled_news {
   background: rgb(27, 149, 224);
-}
-
-/* ================== Layout für Auto-Nächster-Tweet-Schieber ================== */
-#checkbox-container {
-  display: block;
-  visibility: hidden;
-}
-
-#flexSwitchCheckDefault {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
-
-.toggle-switch-label {
-  max-width: 45%;
-  cursor: pointer;
-  display: flex;
-  height: 4vh;
-  background: grey;
-  border-radius: 10px 20px;
-  position: relative;
-  text-indent: 110%;
-  white-space: nowrap;
-  align-items: center;
-}
-
-.toggle-switch-label:after {
-  content: "";
-  position: absolute;
-  top: 5%;
-  left: 2px;
-  width: 30%;
-  height: 90%;
-  border-radius: 10px 20px;
-  background: #fff;
-}
-
-#flexSwitchCheckDefault:checked + label {
-  background: #405cf5;
-  box-shadow: 0 0 10px #00b8cc;
-}
-
-#flexSwitchCheckDefault:checked + label:after {
-  left: calc(100% - 2px);
-  transform: translateX(-100%);
-}
-
-.toggle-switch-label:active:after {
-  width: 100%;
 }
 
 /* ================== Navigation Bar Layout für Labeling Page ================== */
