--- a/static/css/start.css
+++ b/static/css/start.css
@@ -1,3 +1,4 @@
+/* ================== Layout für Start Page ================== */
 body {
   display: flex;
   flex-direction: column;
@@ -5,13 +6,17 @@ body {
   align-items: center;
   padding: 6vh 6vw;
 }
+/* Layout für Überschrift */
 h1 {
   text-shadow: 0 0 4px #ffffff, 0 0 4px #ffffff, 0 0 4px #ffffff,
     0 0 4px #ffffff;
 }
+
+/* Layout für Namen*/
 #names {
   font-style: normal;
 }
+/* Layout für h3 Überschriften/subheadings */
 h3 {
   text-align: center;
 }
@@ -26,16 +31,18 @@ h3 {
 .subheading * {
   text-shadow: 0 0 10px #ffffff;
 }
+/* Layout für Erklärungstext */
 p {
   font-size: large;
   text-align: center;
 }
-
+/* Layout für Startbutton */
 .homebutton {
   padding: 3vh 5vw;
   text-align: center;
   line-height: 0;
 }
+/* Layout für Youtube Video */
 #video-container {
   padding-top: 5vh;
 }
