--- a/templates/loading.html
+++ b/templates/loading.html
@@ -11,7 +11,9 @@
 </head>
 
 <body id="loading">
+	<!-- container for the content on the page -->
 	<div class="outer">
+		<!-- Loading GIF -->
 		<div class="upper">
 			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
 				xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500"
@@ -82,6 +84,7 @@
 	c117.9-117.9,82.9-167.7,82.9-167.7l-2.8-0.1C241.6,182.3,238.2,181.9,233.2,181.5z" />
 			</svg>
 		</div>
+		<!-- Text -->
 		<div class="lower">
 			<div style="color:white; margin-left:auto; margin-right:auto; font-size: 1.3em;">
 				Bitte kurz warten, das Modell wird trainiert...
