--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -43,11 +43,11 @@
             <div class="main-space-top">
                 <h3>Analyse</h3>
                 <hr index1>
-                <p>Die Wordcloud zeigt eine visuelle Darstellung von häufig verwendeten Hashtags im Datensatz. Das
-                    Kuchendiagramm zeigt die Anteile der manuell erstellten Labels am Datensatz. Zusammen können beide
-                    Grafiken helfen, die wichtigsten Themen oder Schwerpunkte in einer großen Menge an Tweets schnell zu
-                    identifizieren. Auch die Tonalität oder Stimmung eines Datensatzes kann so einfach erfasst werden,
-                    indem positive oder negative Wörter hervorgehoben werden.
+                <p>Auf der Analyseseite erhalten Sie einen besseren Überblick über die Tweets und ihre Labels.
+                    Die Wordcloud zeigt Ihenn häufig verwendete Hashtags im Datensatz. Je größer der dargestellte
+                    Begriff, desto häufiger taucht dieser im Datensatz auf.
+                    Das Kuchendiagramm visualisiert die Anteile der manuell erstellten Labels am Datensatz.
+                    Mithilfe der Tabelle können Sie den gesamten Datensatz durchforsten und erstellte Labels einsehen.
                 </p>
             </div>
             <div class="main-space-bottom">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="grid-for-tweet-and-pie">
                     <div class="text">
-                        <h3 white> Anteil der manuell erstellten Labels</h3>
+                        <h3 white> Anteile der manuell erstellten Labels</h3>
                     </div>
                     <div class="text">
                         <h3 white> Tweet mit den meisten Likes</h3>
