--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -44,15 +44,18 @@
         <!-- Area, where the main content is being displayed -->
         <div class="main-space">
             <div class="main-space-top">
-                <p>Unser Annotationstool bietet eine ansprechende Benutzeroberfläche, in der die Tweets, die für die
-                    Analyse ausgewählt wurden, übersichtlich präsentiert werden. Der Annotator verfügt über
-                    Schaltflächen, welche es ermöglichen das Sentiment eines Tweets als positiv, negativ oder neutral zu
-                    kennzeichnen. Zusätzlich bietet die Benutzeroberfläche die Möglichkeit, Tweets, die für die Analyse
-                    irrelevant sind, auszuschließen. Nach einer gewissen Anzahl von Annotationen, kann das entsprechende
-                    Machine Learning Modell trainiert werden und dem Annotator Unterstützung leisten. Beim Drücken auf
-                    "Intelligent sortieren" werden die Tweets nach einer Kombination von Faktoren geordnet, die bei
-                    möglichst geringem Labelingaufwand eine optimale Performance des Machine Learning Modells erlauben.
+                <p>Labeln Sie Ihre Tweets mit den untenstehenden Buttons "Pro", "Anti" und "Neutral".
+                    Bei irrelevanten Tweets kann "Skip" gewählt werden, um diese entsprechend zu markieren.
+                    Nach 15-20 gelabelten Tweets können Sie sich den Labelingaufwand durch die "Intelligent
+                    sortieren"-Funktion reduzieren, indem redundante Tweets ans Ende des
+                    Datensatzes verschoben werden.
+                    Klicken Sie auf Data Facts für spannende Informationen über den Datensatz.
+                    Wechseln Sie nachdem Sie fertig gelabelt haben auf die Startseite und laden Sie den fertig
+                    gelabelten Datensatz herunter!
                 </p>
+
+
+
                 <hr index1>
                 <!-- Progress Bar -->
                 <div class="w3-light-grey w3-round">
