--- a/templates/start.html
+++ b/templates/start.html
@@ -24,7 +24,7 @@
         <h3>Supervisor: Alexander Grote</h3>
     </div>
     <p>Dieses Tool bietet dem Nutzer die Möglichkeit Datensätze von Twitter Tweets zu erstellen, zu verwalten und zu
-        labeln. Die intuitives Labeling Seite bietet dem Nutzer die Möglichkeit Labels manuell zu erstellen und den
+        labeln. Die intuitive Labeling Seite bietet dem Nutzer die Möglichkeit Labels manuell zu erstellen und den
         Nutzer durch Active Learning zu unterstützen. Dafür werden dem Nutzer zuerst die - aus Sicht des Modells -
         interessantesten Tweets Tweets angezeigt und redundante Einträge hinten angestellt. So ist es möglich auch große
         Datensätze effizient zu erschließen und keine Zeit mit unnötigen Einträgen zu verschwenden.
